--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,11 @@
             "app/functions/custom.php",
             "app/functions/pages.php",
             "app/functions/validate.php",
-            "app/functions/flash.php"
+            "app/functions/flash.php",
+            "app/functions/email.php"
         ]
+    },
+    "require": {
+        "phpmailer/phpmailer": "^6.7"
     }
 }
